[package]
name = "tggpt"
version = "0.1.0"
edition = "2024"
authors = []

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
flexi_logger = { version = "0.27", features = ["compress"] }
dotenv = "0.15"
log = "0.4"
tiktoken-rs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
diesel = { version = "2.3", features = ["sqlite"] }
futures-util = "0.3"
