[package]
name = "tggpt"
version = "0.1.0"
edition = "2024"
authors = []

[dependencies]
teloxide = { version = "*", features = ["macros"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
flexi_logger = { version = "*", features = ["compress"] }
dotenv = "*"
log = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "*"
rusqlite = { version = "*", features = ["bundled"] }
futures-util = "*"
